2003-05-20  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* poe.el (make-temp-file) [no make-temp-file, multi-user system]:
	Modified comments.

2003-05-19  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* poe.el (make-temp-file) [no make-temp-file, multi-user system]:
	Flatten nested `unwind-protect'.  Fixed comments.

2003-05-15  Yuuichi Teranishi  <teranisi@gohome.org>

	* poe.el (make-temp-file): New function.

2002-11-05  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mcs-20.el (mcs-region-repertoire-p): New function for UTF-2000
	implementations.
	(mcs-string-repertoire-p): Likewise.
	(detect-mime-charset-region): New implementation for UTF-2000
	implementations.
	(detect-mime-charset-string): New function for UTF-2000
	implementations.

2002-11-03  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* filename.el (filename-filters): Change default value to nil.


2002-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* APEL: Version 10.4 released.

2002-10-03  Takeshi Morishima  <qa3507@email.mot.com>

	* install.el (install-elisp-module): Delete an elc file if the
	optional 5th argument `del-elc' is given.
	(install-elisp-modules): Allow the optional 5th argument `del-elc'
	and pass it to `install-elisp-module'.

2002-10-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mcs-ltn1.el (mime-charset-to-coding-system): Allow the 2nd arg.
	* mcs-nemacs.el (mime-charset-to-coding-system): Ditto.

2002-07-13  Daiki Ueno  <daiki@xemacs.org>

	* mcs-xm.el (encode-mime-charset-string): Use `defun' instead of
	`defsubst'

2002-07-10  Adrian Aichner  <adrian@xemacs.org>

	* emu.el: Conditionalise defalias 'tl:overlay-buffer on
	'tl:overlay-buffer, not 'tl:overlay-put.

2002-06-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mcs-e20.el (charsets-mime-charset-alist): Remove nil's from the
	default value.
	* mcs-xm.el (charsets-mime-charset-alist): Ditto.

2002-06-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mcs-e20.el (charsets-mime-charset-alist): Add Latin8 and Latin9