@@ -1,3 +1,7 @@
+2003-05-22  Yuuichi Teranishi  <teranisi@gohome.org>
+
+	* install.el (install-prefix): Change value for Meadow2 and NTEmacs.
+
 2003-05-20  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
 
 	* poe.el (make-temp-file) [no make-temp-file, multi-user system]:
